# sharepoint-ingestion-tool

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile.bulk  Dockerfile.lambda  docker-compose.local.yml
docs/: ingestion-runbook.md  lessons-learned.md
scripts/: build-lambda.sh  deploy.sh  full-pipeline-test.sh  init-localstack.sh  monitor-bulk-ingest.sh  reconcile.sh  retrigger-all-documents.sh  retry-failed-textract.sh  run-bulk-ingest.sh  smoke-test-local.sh  smoke_test.py  test-local.sh  validate-deployment.sh
src/: access_control.py  bulk_ingest.py  chunker.py  config.py  daily_sync.py  delta_tracker.py  digital_twin.py  document_registry.py  graph_client.py  s3_client.py  textract_client.py  textract_complete.py  textract_trigger.py
src/config/: access_rules.yaml
src/utils/: file_converter.py  path_mapper.py  throttle.py
terraform/: dynamodb.tf  ec2-bulk.tf  eventbridge.tf  iam.tf  lambda.tf  main.tf  monitoring.tf  outputs.tf  s3.tf  secrets.tf  sns.tf  textract.tf  variables.tf
terraform/templates/: bulk-userdata.sh.tftpl
tests/: conftest.py  test_access_control.py  test_bulk_ingest.py  test_chunker.py  test_daily_sync.py  test_delta_tracker.py  test_digital_twin.py  test_document_registry.py  test_file_converter.py  test_graph_client.py  test_path_mapper.py  test_s3_client.py  test_textract_client.py  test_textract_complete.py  test_textract_trigger.py
tests/fixtures/: generate_fixtures.py
tests/integration/: conftest.py  test_delta_tracker_integration.py  test_pipeline_integration.py  (+2 more)
